--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "request": "^2.88.0",
+    "socket.io": "^2.2.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
