--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.3.0",
     "request": "^2.88.0",
     "socket.io": "^2.2.0",
     "underscore": "^1.9.1"
