--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
-    "nodemailer": "^6.3.0",
+    "nodemailer": "^6.3.1",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "qr-image": "^3.2.0",
     "request": "^2.88.0",
     "socket.io": "^2.2.0",
     "underscore": "^1.9.1"
